# scandinavian-dictionary-crosslinker

./: .gitignore  README.md  main.go
.github/: dependabot.yml
.github/workflows/: crosslinker-build.yml  crosslinker-lint.yml  crosslinker-test.yml  downloader-build.yml  downloader-lint.yml  minifier-build.yml  npm-module-build.yml  npm-module-lint.yml  npm-module-release.yml  npm-module-test.yml
crosslinker/: go.mod  main.go  utils.go
crosslinker/internal/crosslinks/: crosslinks.go  manual-overrides.go
crosslinker/internal/sitemaps/: parser.go  reader.go  sitemaps.go
downloader/: Cargo.toml
downloader/src/: main.rs
minifier/: minifier.nimble
minifier/src/: minifier.nim
npm-module/: .eslintrc.js  .gitignore  README.md  biome.json  bun.lockb  package.json  tsconfig.json
npm-module/resources/: crosslinks.json
npm-module/src/: index.ts  models.ts  parser.ts  reader.ts
npm-module/tests/: crosslinks.test.ts
