[package]
name = "scandinavian-crosslinker-downloader"
version = "0.1.0"
authors = ["stscoundrel / Sampo Silvennoinen"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/stscoundrel/scandinavian-dictionary-crosslinker"
description = """
Downloads XML sitemaps for predefined dictionaries to be linked.
"""
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.12"
tokio = { version = "1.24", features = ["macros", "rt-multi-thread"] }
futures = "0.3.4"